@@ -28,8 +28,8 @@ public class CoreModule extends Module {
         dEnv.put("true", DBool.TRUE);
         dEnv.put("false", DBool.FALSE);
         dEnv.addTokenFunction("+", ((args, env) -> {
-            if (!(args.get(0) instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.get(0).type(), "arithmetic");
+            if (!(args.getFirst() instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
             for (int i = 1; i < args.size(); ++i) {
                 if (!(args.get(i) instanceof DArithmetic))
                     throw new DevoreCastException(args.get(i).type(), "arithmetic");
@@ -38,8 +38,8 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("-", ((args, env) -> {
-            if (!(args.get(0) instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.get(0).type(), "arithmetic");
+            if (!(args.getFirst() instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
             if (args.size() == 1)
                 return DInt.valueOf(0).sub(arithmetic);
             for (int i = 1; i < args.size(); ++i) {
@@ -50,8 +50,8 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("*", ((args, env) -> {
-            if (!(args.get(0) instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.get(0).type(), "arithmetic");
+            if (!(args.getFirst() instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
             for (int i = 1; i < args.size(); ++i) {
                 if (!(args.get(i) instanceof DArithmetic))
                     throw new DevoreCastException(args.get(i).type(), "arithmetic");
@@ -60,8 +60,8 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("/", ((args, env) -> {
-            if (!(args.get(0) instanceof DArithmetic arithmetic))
-                throw new DevoreCastException(args.get(0).type(), "arithmetic");
+            if (!(args.getFirst() instanceof DArithmetic arithmetic))
+                throw new DevoreCastException(args.getFirst().type(), "arithmetic");
             for (int i = 1; i < args.size(); ++i) {
                 if (!(args.get(i) instanceof DArithmetic))
                     throw new DevoreCastException(args.get(i).type(), "arithmetic");
@@ -70,11 +70,11 @@ public class CoreModule extends Module {
             return arithmetic;
         }), 1, true);
         dEnv.addTokenFunction("pow", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
             if (!(args.get(1) instanceof DNumber))
                 throw new DevoreCastException(args.get(1).type(), "number");
-            return ((DNumber) args.get(0)).pow(((DNumber) args.get(1)));
+            return ((DNumber) args.getFirst()).pow(((DNumber) args.get(1)));
         }), 2, false);
         dEnv.addTokenFunction("average", ((args, env) -> {
             DFloat num = DFloat.valueOf(0);
@@ -86,46 +86,46 @@ public class CoreModule extends Module {
             return num.div(DFloat.valueOf(args.size()));
         }), 1, true);
         dEnv.addTokenFunction("mod", ((args, env) -> {
-            if (!(args.get(0) instanceof DInt))
-                throw new DevoreCastException(args.get(0).type(), "int");
+            if (!(args.getFirst() instanceof DInt))
+                throw new DevoreCastException(args.getFirst().type(), "int");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
-            return ((DInt) args.get(0)).mod(((DInt) args.get(1)));
+            return ((DInt) args.getFirst()).mod(((DInt) args.get(1)));
         }), 2, false);
         dEnv.addTokenFunction("abs", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).abs();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).abs();
         }), 1, false);
         dEnv.addTokenFunction("sqrt", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).sqrt();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).sqrt();
         }), 1, false);
         dEnv.addTokenFunction("sin", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).sin();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).sin();
         }), 1, false);
         dEnv.addTokenFunction("cos", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).cos();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).cos();
         }), 1, false);
         dEnv.addTokenFunction("tan", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).tan();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).tan();
         }), 1, false);
         dEnv.addTokenFunction("ceil", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).ceil();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).ceil();
         }), 1, false);
         dEnv.addTokenFunction("floor", ((args, env) -> {
-            if (!(args.get(0) instanceof DNumber))
-                throw new DevoreCastException(args.get(0).type(), "number");
-            return ((DNumber) args.get(0)).floor();
+            if (!(args.getFirst() instanceof DNumber))
+                throw new DevoreCastException(args.getFirst().type(), "number");
+            return ((DNumber) args.getFirst()).floor();
         }), 1, false);
         dEnv.addTokenFunction("require", ((args, env) -> {
             for (Token t : args) {
@@ -178,20 +178,20 @@ public class CoreModule extends Module {
             return DWord.WORD_NIL;
         }), 1, true);
         dEnv.addSymbolFunction("def", ((ast, env) -> {
-            if (ast.get(0).isEmpty() && ast.get(0).type != AstNode.AstType.FUNCTION) {
+            if (ast.getFirst().isEmpty() && ast.getFirst().type != AstNode.AstType.FUNCTION) {
                 Env newEnv = env.createChild();
                 Token result = DWord.WORD_NIL;
                 for (int i = 1; i < ast.size(); ++i)
                     result = Evaluator.eval(newEnv, ast.get(i).copy());
-                env.put(ast.get(0).op.toString(), result);
+                env.put(ast.getFirst().op.toString(), result);
             } else {
                 List<String> parameters = new ArrayList<>();
-                for (AstNode parameter : ast.get(0).children)
+                for (AstNode parameter : ast.getFirst().children)
                     parameters.add(parameter.op.toString());
                 List<AstNode> asts = new ArrayList<>();
                 for (int i = 1; i < ast.size(); ++i)
                     asts.add(ast.get(i).copy());
-                env.addTokenFunction(ast.get(0).op.toString(), ((cArgs, cEnv) -> {
+                env.addTokenFunction(ast.getFirst().op.toString(), ((cArgs, cEnv) -> {
                     Env newEnv = env.createChild();
                     for (int i = 0; i < parameters.size(); ++i)
                         newEnv.put(parameters.get(i), cArgs.get(i));
@@ -204,20 +204,20 @@ public class CoreModule extends Module {
             return DWord.WORD_NIL;
         }), 2, true);
         dEnv.addSymbolFunction("set!", ((ast, env) -> {
-            if (ast.get(0).isEmpty() && ast.get(0).type != AstNode.AstType.FUNCTION) {
+            if (ast.getFirst().isEmpty() && ast.getFirst().type != AstNode.AstType.FUNCTION) {
                 Env newEnv = env.createChild();
                 Token result = DWord.WORD_NIL;
                 for (int i = 1; i < ast.size(); ++i)
                     result = Evaluator.eval(newEnv, ast.get(i).copy());
-                env.set(ast.get(0).op.toString(), result);
+                env.set(ast.getFirst().op.toString(), result);
             } else {
                 List<String> parameters = new ArrayList<>();
-                for (AstNode parameter : ast.get(0).children)
+                for (AstNode parameter : ast.getFirst().children)
                     parameters.add(parameter.op.toString());
                 List<AstNode> asts = new ArrayList<>();
                 for (int i = 1; i < ast.size(); ++i)
                     asts.add(ast.get(i).copy());
-                env.setTokenFunction(ast.get(0).op.toString(), ((cArgs, cEnv) -> {
+                env.setTokenFunction(ast.getFirst().op.toString(), ((cArgs, cEnv) -> {
                     Env newEnv = env.createChild();
                     for (int i = 0; i < parameters.size(); ++i)
                         newEnv.put(parameters.get(i), cArgs.get(i));
@@ -232,15 +232,15 @@ public class CoreModule extends Module {
         dEnv.addSymbolFunction("let", ((ast, env) -> {
             Env newEnv = env.createChild();
             Token result = DWord.WORD_NIL;
-            for (AstNode node : ast.get(0).children) {
+            for (AstNode node : ast.getFirst().children) {
                 if ("apply".equals(node.op.toString())) {
                     List<String> parameters = new ArrayList<>();
                     List<AstNode> asts = new ArrayList<>();
-                    for (AstNode parameterNode : node.get(0).children)
+                    for (AstNode parameterNode : node.getFirst().children)
                         parameters.add(parameterNode.op.toString());
                     for (int i = 1; i < node.size(); ++i)
                         asts.add(node.get(i).copy());
-                    newEnv.addTokenFunction(ast.get(0).op.toString(), ((cArgs, cEnv) -> {
+                    newEnv.addTokenFunction(ast.getFirst().op.toString(), ((cArgs, cEnv) -> {
                         Env newInEnv = env.createChild();
                         for (int i = 0; i < parameters.size(); ++i)
                             newInEnv.put(parameters.get(i), cArgs.get(i));
@@ -263,15 +263,15 @@ public class CoreModule extends Module {
         dEnv.addSymbolFunction("let*", ((ast, env) -> {
             Env newEnv = env.createChild();
             Token result = DWord.WORD_NIL;
-            for (AstNode node : ast.get(0).children) {
+            for (AstNode node : ast.getFirst().children) {
                 if ("apply".equals(node.op.toString())) {
                     List<String> parameters = new ArrayList<>();
                     List<AstNode> asts = new ArrayList<>();
-                    for (AstNode parameterNode : node.get(0).children)
+                    for (AstNode parameterNode : node.getFirst().children)
                         parameters.add(parameterNode.op.toString());
                     for (int i = 1; i < node.size(); ++i)
                         asts.add(node.get(i).copy());
-                    newEnv.addTokenFunction(ast.get(0).op.toString(), ((cArgs, cEnv) -> {
+                    newEnv.addTokenFunction(ast.getFirst().op.toString(), ((cArgs, cEnv) -> {
                         Env newInEnv = newEnv.createChild();
                         for (int i = 0; i < parameters.size(); ++i)
                             newInEnv.put(parameters.get(i), cArgs.get(i));
@@ -293,9 +293,9 @@ public class CoreModule extends Module {
         }), 2, true);
         dEnv.addSymbolFunction("lambda", ((ast, env) -> {
             List<String> parameters = new ArrayList<>();
-            if (!ast.get(0).isNull()) {
-                parameters.add(ast.get(0).op.toString());
-                for (AstNode parameter : ast.get(0).children)
+            if (!ast.getFirst().isNull()) {
+                parameters.add(ast.getFirst().op.toString());
+                for (AstNode parameter : ast.getFirst().children)
                     parameters.add(parameter.op.toString());
             }
             List<AstNode> asts = new ArrayList<>();
@@ -318,32 +318,32 @@ public class CoreModule extends Module {
             return DFunction.newFunction(df, parameters.size(), false);
         }), 2, true);
         dEnv.addTokenFunction("apply", ((args, env) -> {
-            if (!(args.get(0) instanceof DFunction))
-                throw new DevoreCastException(args.get(0).type(), "function");
+            if (!(args.getFirst() instanceof DFunction))
+                throw new DevoreCastException(args.getFirst().type(), "function");
             List<Token> parameters = new ArrayList<>();
             for (int i = 1; i < args.size(); ++i)
                 parameters.add(args.get(i));
             AstNode asts = AstNode.nullAst.copy();
             for (Token arg : parameters)
                 asts.add(new AstNode(arg));
-            return ((DFunction) args.get(0)).call(asts, env.createChild());
+            return ((DFunction) args.getFirst()).call(asts, env.createChild());
         }), 1, true);
         dEnv.addTokenFunction(">", ((args, env) ->
-                DBool.valueOf(args.get(0).compareTo(args.get(1)) > 0)), 2, false);
+                DBool.valueOf(args.getFirst().compareTo(args.get(1)) > 0)), 2, false);
         dEnv.addTokenFunction("<", ((args, env) ->
-                DBool.valueOf(args.get(0).compareTo(args.get(1)) < 0)), 2, false);
+                DBool.valueOf(args.getFirst().compareTo(args.get(1)) < 0)), 2, false);
         dEnv.addTokenFunction("=", ((args, env) ->
-                DBool.valueOf(args.get(0).compareTo(args.get(1)) == 0)), 2, false);
+                DBool.valueOf(args.getFirst().compareTo(args.get(1)) == 0)), 2, false);
         dEnv.addTokenFunction("/=", ((args, env) ->
-                DBool.valueOf(args.get(0).compareTo(args.get(1)) != 0)), 2, false);
+                DBool.valueOf(args.getFirst().compareTo(args.get(1)) != 0)), 2, false);
         dEnv.addTokenFunction(">=", ((args, env) ->
-                DBool.valueOf(args.get(0).compareTo(args.get(1)) >= 0)), 2, false);
+                DBool.valueOf(args.getFirst().compareTo(args.get(1)) >= 0)), 2, false);
         dEnv.addTokenFunction("<=", ((args, env) ->
-                DBool.valueOf(args.get(0).compareTo(args.get(1)) <= 0)), 2, false);
+                DBool.valueOf(args.getFirst().compareTo(args.get(1)) <= 0)), 2, false);
         dEnv.addSymbolFunction("if", (ast, env) -> {
             Token result = DWord.WORD_NIL;
             Env newEnv = env.createChild();
-            Token condition = Evaluator.eval(newEnv, ast.get(0).copy());
+            Token condition = Evaluator.eval(newEnv, ast.getFirst().copy());
             if (!(condition instanceof DBool))
                 throw new DevoreCastException(condition.type(), "bool");
             if (((DBool) condition).bool)
@@ -357,10 +357,10 @@ public class CoreModule extends Module {
             Env newEnv = env.createChild();
             for (AstNode node : ast.children) {
                 if (node.op instanceof DOp && "else".equals(node.op.toString())) {
-                    result = Evaluator.eval(newEnv, node.get(0).copy());
+                    result = Evaluator.eval(newEnv, node.getFirst().copy());
                     break;
                 } else {
-                    Token condition = Evaluator.eval(newEnv, node.get(0).copy());
+                    Token condition = Evaluator.eval(newEnv, node.getFirst().copy());
                     if (!(condition instanceof DBool))
                         throw new DevoreCastException(condition.type(), "bool");
                     if (((DBool) condition).bool) {
@@ -384,13 +384,13 @@ public class CoreModule extends Module {
         dEnv.addSymbolFunction("while", (ast, env) -> {
             Token result = DWord.WORD_NIL;
             Env newEnv = env.createChild();
-            Token condition = Evaluator.eval(newEnv, ast.get(0).copy());
+            Token condition = Evaluator.eval(newEnv, ast.getFirst().copy());
             if (!(condition instanceof DBool))
                 throw new DevoreCastException(condition.type(), "bool");
             while (((DBool) condition).bool) {
                 for (int i = 1; i < ast.size(); ++i)
                     result = Evaluator.eval(newEnv, ast.get(i).copy());
-                condition = Evaluator.eval(newEnv, ast.get(0).copy());
+                condition = Evaluator.eval(newEnv, ast.getFirst().copy());
             }
             return result;
         }, 2, true);
@@ -431,20 +431,20 @@ public class CoreModule extends Module {
             return DBool.FALSE;
         }), 1, true);
         dEnv.addTokenFunction("not", ((args, env) -> {
-            if (!(args.get(0) instanceof DBool))
-                throw new DevoreCastException(args.get(0).type(), "bool");
-            if (((DBool) args.get(0)).bool)
+            if (!(args.getFirst() instanceof DBool))
+                throw new DevoreCastException(args.getFirst().type(), "bool");
+            if (((DBool) args.getFirst()).bool)
                 return DBool.FALSE;
             return DBool.TRUE;
         }), 1, false);
         dEnv.addTokenFunction("random", ((args, env) -> {
-            if (!(args.get(0) instanceof DInt))
-                throw new DevoreCastException(args.get(0).type(), "int");
+            if (!(args.getFirst() instanceof DInt))
+                throw new DevoreCastException(args.getFirst().type(), "int");
             if (args.size() > 1)
                 if (!(args.get(1) instanceof DInt))
                     throw new DevoreCastException(args.get(1).type(), "int");
-            BigInteger start = args.size() == 1 ? BigInteger.ZERO : ((DInt) args.get(0)).toBigInteger();
-            BigInteger end = args.size() == 1 ? ((DInt) args.get(0)).toBigInteger().subtract(BigInteger.ONE) : ((DInt) args.get(1)).toBigInteger().subtract(BigInteger.ONE);
+            BigInteger start = args.size() == 1 ? BigInteger.ZERO : ((DInt) args.getFirst()).toBigInteger();
+            BigInteger end = args.size() == 1 ? ((DInt) args.getFirst()).toBigInteger().subtract(BigInteger.ONE) : ((DInt) args.get(1)).toBigInteger().subtract(BigInteger.ONE);
             Random rand = new Random();
             int scale = end.toString().length();
             StringBuilder generated = new StringBuilder();
@@ -468,13 +468,13 @@ public class CoreModule extends Module {
         }), 1, true);
         dEnv.addTokenFunction("list", ((args, env) -> DList.valueOf(new ArrayList<>(args))), 1, true);
         dEnv.addTokenFunction("list-contains", ((args, env) -> {
-            if (!(args.get(0) instanceof DList))
-                throw new DevoreCastException(args.get(0).type(), "list");
-            return DBool.valueOf(((DList) args.get(0)).contains(args.get(1)));
+            if (!(args.getFirst() instanceof DList))
+                throw new DevoreCastException(args.getFirst().type(), "list");
+            return DBool.valueOf(((DList) args.getFirst()).contains(args.get(1)));
         }), 2, false);
         dEnv.addTokenFunction("list-get", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (list.size() == 0)
@@ -482,8 +482,8 @@ public class CoreModule extends Module {
             return list.get(((DInt) args.get(1)).toBigInteger().intValue());
         }), 2, false);
         dEnv.addTokenFunction("list-set", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (list.size() == 0)
@@ -491,8 +491,8 @@ public class CoreModule extends Module {
             return list.set(((DInt) args.get(1)).toBigInteger().intValue(), args.get(2), false);
         }), 3, false);
         dEnv.addTokenFunction("list-remove", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             if (!(args.get(1) instanceof DInt))
@@ -500,13 +500,13 @@ public class CoreModule extends Module {
             return list.remove(args.get(1), false);
         }), 2, false);
         dEnv.addTokenFunction("list-add", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             return list.add(args.get(1), false);
         }), 2, false);
         dEnv.addTokenFunction("list-set!", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (!(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (list.size() == 0)
@@ -514,8 +514,8 @@ public class CoreModule extends Module {
             return list.set(((DInt) args.get(1)).toBigInteger().intValue(), args.get(2), true);
         }), 3, false);
         dEnv.addTokenFunction("list-remove!", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             if (!(args.get(1) instanceof DInt))
@@ -523,50 +523,50 @@ public class CoreModule extends Module {
             return list.remove(args.get(1), false);
         }), 2, false);
         dEnv.addTokenFunction("list-add!", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             return list.add(args.get(1), true);
         }), 2, false);
         dEnv.addTokenFunction("head", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
-            return list.get(0);
+            return list.getFirst();
         }), 1, false);
         dEnv.addTokenFunction("last", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             if (list.size() == 0)
                 return DWord.WORD_NIL;
             return list.get(list.size() - 1);
         }), 1, false);
         dEnv.addTokenFunction("tail", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             return list.subList(1, list.size());
         }), 1, false);
         dEnv.addTokenFunction("init", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             return list.subList(0, list.size() - 1);
         }), 1, false);
         dEnv.addTokenFunction("length", ((args, env) -> {
-            if (!(args.get(0) instanceof DList))
-                return DInt.valueOf(args.get(0).toString().length());
-            return DInt.valueOf(((DList) args.get(0)).size());
+            if (!(args.getFirst() instanceof DList))
+                return DInt.valueOf(args.getFirst().toString().length());
+            return DInt.valueOf(((DList) args.getFirst()).size());
         }), 1, false);
         dEnv.addTokenFunction("reverse", ((args, env) -> {
-            if (!(args.get(0) instanceof DList tokens))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList tokens))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             List<Token> temp = new ArrayList<>();
             for (int i = tokens.size() - 1; i >= 0; --i)
                 temp.add(tokens.get(i));
             return DList.valueOf(new ArrayList<>(temp));
         }), 1, false);
         dEnv.addTokenFunction("reverse!", ((args, env) -> {
-            if (!(args.get(0) instanceof DList tokens))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList tokens))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             List<Token> temp = new ArrayList<>();
             for (int i = tokens.size() - 1; i >= 0; --i)
                 temp.add(tokens.get(i));
@@ -576,13 +576,13 @@ public class CoreModule extends Module {
             return tokens;
         }), 1, false);
         dEnv.addTokenFunction("sort", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             return list.sort(false);
         }), 1, false);
         dEnv.addTokenFunction("sort!", ((args, env) -> {
-            if (!(args.get(0) instanceof DList list))
-                throw new DevoreCastException(args.get(0).type(), "list");
+            if (!(args.getFirst() instanceof DList list))
+                throw new DevoreCastException(args.getFirst().type(), "list");
             return list.sort(true);
         }), 1, true);
         dEnv.addTokenFunction("++", ((args, env) -> {
@@ -611,8 +611,8 @@ public class CoreModule extends Module {
             return result;
         }), 1, true);
         dEnv.addTokenFunction("map", ((args, env) -> {
-            if (!(args.get(0) instanceof DFunction))
-                throw new DevoreCastException(args.get(0).type(), "function");
+            if (!(args.getFirst() instanceof DFunction))
+                throw new DevoreCastException(args.getFirst().type(), "function");
             if (!(args.get(1) instanceof DList))
                 throw new DevoreCastException(args.get(1).type(), "list");
             List<Token> result = new ArrayList<>();
@@ -625,13 +625,13 @@ public class CoreModule extends Module {
                         throw new DevoreCastException(args.get(j + 1).type(), "list");
                     parameters.add(((DList) args.get(j + 1)).get(i));
                 }
-                ((DFunction) args.get(0)).call(parameters.toArray(Token[]::new), env.createChild());
+                ((DFunction) args.getFirst()).call(parameters.toArray(Token[]::new), env.createChild());
             }
             return DList.valueOf(result);
         }), 2, true);
         dEnv.addTokenFunction("for-each", ((args, env) -> {
-            if (!(args.get(0) instanceof DFunction))
-                throw new DevoreCastException(args.get(0).type(), "function");
+            if (!(args.getFirst() instanceof DFunction))
+                throw new DevoreCastException(args.getFirst().type(), "function");
             if (!(args.get(1) instanceof DList))
                 throw new DevoreCastException(args.get(1).type(), "list");
             List<Token> tokens = ((DList) args.get(1)).toList();
@@ -643,35 +643,35 @@ public class CoreModule extends Module {
                         throw new DevoreCastException(args.get(j + 1).type(), "list");
                     parameters.add(((DList) args.get(j + 1)).get(i));
                 }
-                ((DFunction) args.get(0)).call(parameters.toArray(Token[]::new), env.createChild());
+                ((DFunction) args.getFirst()).call(parameters.toArray(Token[]::new), env.createChild());
             }
             return DWord.WORD_NIL;
         }), 2, true);
         dEnv.addTokenFunction("foldr", ((args, env) -> {
-            if (!(args.get(0) instanceof DFunction))
-                throw new DevoreCastException(args.get(0).type(), "function");
+            if (!(args.getFirst() instanceof DFunction))
+                throw new DevoreCastException(args.getFirst().type(), "function");
             if (!(args.get(2) instanceof DList))
                 throw new DevoreCastException(args.get(2).type(), "list");
             var result = args.get(1);
             List<Token> tokens = ((DList) args.get(2)).toList();
             for (int i = tokens.size() - 1; i >= 0; --i)
-                result = ((DFunction) args.get(0)).call(new Token[]{tokens.get(i), result}, env.createChild());
+                result = ((DFunction) args.getFirst()).call(new Token[]{tokens.get(i), result}, env.createChild());
             return result;
         }), 3, false);
         dEnv.addTokenFunction("foldl", ((args, env) -> {
-            if (!(args.get(0) instanceof DFunction))
-                throw new DevoreCastException(args.get(0).type(), "function");
+            if (!(args.getFirst() instanceof DFunction))
+                throw new DevoreCastException(args.getFirst().type(), "function");
             if (!(args.get(2) instanceof DList))
                 throw new DevoreCastException(args.get(2).type(), "list");
             var result = args.get(1);
             List<Token> tokens = ((DList) args.get(2)).toList();
             for (int i = tokens.size() - 1; i >= 0; --i)
-                result = ((DFunction) args.get(0)).call(new Token[]{result, tokens.get(i)}, env.createChild());
+                result = ((DFunction) args.getFirst()).call(new Token[]{result, tokens.get(i)}, env.createChild());
             return result;
         }), 3, false);
         dEnv.addTokenFunction("filter", ((args, env) -> {
-            if (!(args.get(0) instanceof DFunction))
-                throw new DevoreCastException(args.get(0).type(), "function");
+            if (!(args.getFirst() instanceof DFunction))
+                throw new DevoreCastException(args.getFirst().type(), "function");
             if (!(args.get(1) instanceof DList))
                 throw new DevoreCastException(args.get(1).type(), "list");
             List<Token> result = new ArrayList<>();
@@ -679,7 +679,7 @@ public class CoreModule extends Module {
             for (Token token : tokens) {
                 AstNode asts = AstNode.nullAst.copy();
                 asts.add(new AstNode(token));
-                Token condition = ((DFunction) args.get(0)).call(asts, env.createChild());
+                Token condition = ((DFunction) args.getFirst()).call(asts, env.createChild());
                 if (!(condition instanceof DBool))
                     throw new DevoreCastException(condition.type(), "list");
                 if (((DBool) condition).bool)
@@ -688,15 +688,15 @@ public class CoreModule extends Module {
             return DList.valueOf(result);
         }), 2, false);
         dEnv.addTokenFunction("range", ((args, env) -> {
-            if (!(args.get(0) instanceof DInt))
-                throw new DevoreCastException(args.get(0).type(), "int");
+            if (!(args.getFirst() instanceof DInt))
+                throw new DevoreCastException(args.getFirst().type(), "int");
             if (args.size() > 1 && !(args.get(1) instanceof DInt))
                 throw new DevoreCastException(args.get(1).type(), "int");
             if (args.size() > 2 && !(args.get(2) instanceof DInt))
                 throw new DevoreCastException(args.get(2).type(), "int");
-            BigInteger start = args.size() > 1 ? ((DInt) args.get(0)).toBigInteger() : BigInteger.ZERO;
+            BigInteger start = args.size() > 1 ? ((DInt) args.getFirst()).toBigInteger() : BigInteger.ZERO;
             BigInteger end = args.size() > 1 ? ((DInt) args.get(1)).toBigInteger().subtract(BigInteger.ONE)
-                    : ((DInt) args.get(0)).toBigInteger().subtract(BigInteger.ONE);
+                    : ((DInt) args.getFirst()).toBigInteger().subtract(BigInteger.ONE);
             BigInteger step = args.size() > 2 ? ((DInt) args.get(2)).toBigInteger() : BigInteger.ONE;
             BigInteger size = end.subtract(start).divide(step);
             List<Token> list = new ArrayList<>();
@@ -708,57 +708,57 @@ public class CoreModule extends Module {
             return DList.valueOf(list);
         }), 1, true);
         dEnv.addTokenFunction("string->int", ((args, env) -> {
-            if (!(args.get(0) instanceof DString))
-                throw new DevoreCastException(args.get(0).type(), "string");
-            return DInt.valueOf(new BigInteger(args.get(0).toString()));
+            if (!(args.getFirst() instanceof DString))
+                throw new DevoreCastException(args.getFirst().type(), "string");
+            return DInt.valueOf(new BigInteger(args.getFirst().toString()));
         }), 1, false);
         dEnv.addTokenFunction("string->float", ((args, env) -> {
-            if (!(args.get(0) instanceof DString))
-                throw new DevoreCastException(args.get(0).type(), "string");
-            return DFloat.valueOf(new BigDecimal(args.get(0).toString()));
+            if (!(args.getFirst() instanceof DString))
+                throw new DevoreCastException(args.getFirst().type(), "string");
+            return DFloat.valueOf(new BigDecimal(args.getFirst().toString()));
         }), 1, false);
         dEnv.addTokenFunction("string->bool", ((args, env) -> {
-            if (!(args.get(0) instanceof DString))
-                throw new DevoreCastException(args.get(0).type(), "string");
-            return "true".equals(args.get(0).toString()) ? DBool.TRUE : DBool.FALSE;
+            if (!(args.getFirst() instanceof DString))
+                throw new DevoreCastException(args.getFirst().type(), "string");
+            return "true".equals(args.getFirst().toString()) ? DBool.TRUE : DBool.FALSE;
         }), 1, false);
-        dEnv.addTokenFunction("->string", ((args, env) -> DString.valueOf(args.get(0).toString())), 1, false);
+        dEnv.addTokenFunction("->string", ((args, env) -> DString.valueOf(args.getFirst().toString())), 1, false);
         dEnv.addTokenFunction("string->chars", ((args, env) -> {
-            if (!(args.get(0) instanceof DString))
-                throw new DevoreCastException(args.get(0).type(), "string");
-            char[] chars = args.get(0).toString().toCharArray();
+            if (!(args.getFirst() instanceof DString))
+                throw new DevoreCastException(args.getFirst().type(), "string");
+            char[] chars = args.getFirst().toString().toCharArray();
             List<Token> tokens = new ArrayList<>();
             for (char c : chars)
                 tokens.add(DString.valueOf(String.valueOf(c)));
             return DList.valueOf(tokens);
         }), 1, false);
         dEnv.addTokenFunction("char->ascii", ((args, env) -> {
-            if (!(args.get(0) instanceof DString))
-                throw new DevoreCastException(args.get(0).type(), "string");
-            return DInt.valueOf((int) args.get(0).toString().charAt(0));
+            if (!(args.getFirst() instanceof DString))
+                throw new DevoreCastException(args.getFirst().type(), "string");
+            return DInt.valueOf((int) args.getFirst().toString().charAt(0));
         }), 1, false);
         dEnv.addTokenFunction("ascii->char", ((args, env) -> {
-            if (!(args.get(0) instanceof DInt))
-                throw new DevoreCastException(args.get(0).type(), "int");
-            return DString.valueOf(String.valueOf((char) ((DInt) args.get(0)).toBigInteger().intValue()));
+            if (!(args.getFirst() instanceof DInt))
+                throw new DevoreCastException(args.getFirst().type(), "int");
+            return DString.valueOf(String.valueOf((char) ((DInt) args.getFirst()).toBigInteger().intValue()));
         }), 1, false);
         dEnv.addTokenFunction("exit", ((args, env) -> {
-            if (!(args.get(0) instanceof DInt))
-                throw new DevoreCastException(args.get(0).type(), "int");
-            System.exit(((DInt) args.get(0)).toBigInteger().intValue());
-            return args.get(0);
+            if (!(args.getFirst() instanceof DInt))
+                throw new DevoreCastException(args.getFirst().type(), "int");
+            System.exit(((DInt) args.getFirst()).toBigInteger().intValue());
+            return args.getFirst();
         }), 1, false);
         dEnv.addTokenFunction("sleep", ((args, env) -> {
-            if (!(args.get(0) instanceof DInt))
-                throw new DevoreCastException(args.get(0).type(), "int");
+            if (!(args.getFirst() instanceof DInt))
+                throw new DevoreCastException(args.getFirst().type(), "int");
             try {
-                Thread.sleep(((DInt) args.get(0)).toBigInteger().longValue());
+                Thread.sleep(((DInt) args.getFirst()).toBigInteger().longValue());
             } catch (InterruptedException e) {
-                return args.get(0);
+                return args.getFirst();
             }
-            return args.get(0);
+            return args.getFirst();
         }), 1, false);
-        dEnv.addTokenFunction("type", ((args, env) -> DString.valueOf(args.get(0).type())), 1, false);
+        dEnv.addTokenFunction("type", ((args, env) -> DString.valueOf(args.getFirst().type())), 1, false);
         dEnv.addTokenFunction("time", ((args, env) -> DInt.valueOf(System.currentTimeMillis())), 0, false);
     }
 }
